# rotsim2d_apps

./: .bumpversion.cfg  .gitignore  .python-version  LICENSE  README.md  README.org  README.rst  bumpload.sh  dev-requirements.in  pip-refresh.ps1  pip-refresh.sh  pyproject.toml  requirements.txt  setup.cfg
rotsim2d_apps/: Makefile  MplCanvas.py  __init__.py  peak_picker.py  rotsim2d_calc.py
rotsim2d_apps/polarizations/: AngleWidget.py  PolarizationWidget.py  PolarizationsUI.py  PolarizationsUI.ui  main.py
rotsim2d_apps/waiting_time/: ListView.py  MplWidget.py  PlotsWidget.py  Ui_PathwaysWidget.py  Ui_PlotsWidget.py  Ui_PlotsWidget.ui  Ui_WaitingTimeWindow.py  Ui_WaitingTimeWindow.ui  main.py
rotsim2d_guis/: Makefile  peak_picker.py  rotsim2d_calc.py
rotsim2d_guis/polarizations/: AngleWidget.ui  Makefile  PolarizationWidget.py  PolarizationsUI.ui  main.py
rotsim2d_guis/waiting_time/: Makefile  PathwaysWidget.py  Ui_PathwaysWidget.ui
