[metadata]
name = rotsim2d_apps
version = attr: rotsim2d_apps.__version__
author = Grzegorz Kowzan
author_email = grzegorz@kowzan.eu
description = Inspect third-order pathways, polarization and waiting-time dependence of 2DIR gas-phase spectra
long_description = file: README.md
url = https://gitlab.com/allisonlab/mdcs/rotsim2d_apps
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = rotsim2d_apps, rotsim2d_apps.polarizations
python_requires = >=3.6
install_requires =
    rotsim2d >= 0.8.0post4
    numpy >= 1.16.5
    asteval >= 0.9.25
    toml >= 0.10.2
    matplotlib >= 3.3.4
    PyQt5

[options.entry_points]
console_scripts =
    rotsim2d_polarizations = rotsim2d_apps.polarizations:run
    rotsim2d_peak_picker = rotsim2d_apps.peak_picker:run
    rotsim2d_waiting_time = rotsim2d_apps.waiting_time:run
    rotsim2d_calc = rotsim2d_apps.rotsim2d_calc:run